--- a/pages/header.html
+++ b/pages/header.html
@@ -11,7 +11,7 @@
   <header>
     <div class="topnav" id="myTopnav">
       <div class="content">
-        <a href="./index.html"><img src="../images/logo/logo-letters.png"></a>
+        <a href="./home.html"><img src="../images/logo/logo-letters.png"></a>
         <nav>
           <li><a href="./home.html">Home</a></li>
           <li><a href="./about.html">About</a></li>
