--- a/equipment.html
+++ b/equipment.html
@@ -53,94 +53,294 @@
     </header>
     <main>
         <!-- Banner -->
-        <section class="banner"
-            style="background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url(./images/icons/ocean.jpg);">
+        <section class="banner short"
+            style="background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url(./images/icons/scuba-diver.jpg);">
             <article class="text">
-                <h1>Jeddah Freediving</h1>
-                <span class="text-type" data-wait="1500"
-                    data-words='["Quality equipment", "Awesome insructors", "What are you waiting for!"]'></span>
-                <div class="buttons">
-                    <button onclick="location.href='./equipment.html'" type="button"><span>Equiptment</span></button>
-                    <button onclick="location.href='#'" type="button"><span>Classes</span></button>
-                </div>
+                <h1>Equipment</h1>
             </article>
         </section>
-        <!-- About athletes -->
-        <article class="main hidden">
-            <div class="icon">
-                <img src="./images/icons/athletes.png" alt="">
-            </div>
-            <div class="info">
-                <a href="./athletes.html">
-                    <h1>Our Athletes</h1>
-                </a>
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Laoreet id donec ultrices tincidunt arcu non sodales. Volutpat blandit aliquam etiam erat velit scelerisque in dictum non. Dignissim diam quis enim lobortis scelerisque fermentum dui faucibus. Pulvinar etiam non quam lacus suspendisse faucibus interdum posuere. At auctor urna nunc id cursus metus. Feugiat vivamus at augue eget arcu. Arcu odio ut sem nulla pharetra diam sit amet. Amet risus nullam eget felis eget nunc. Eleifend quam adipiscing vitae proin sagittis nisl rhoncus mattis. In est ante in nibh mauris. Viverra aliquet eget sit amet tellus cras adipiscing enim eu.</p>
-            </div>
-        </article>
-        <article class="main inverted hidden">
-            <div class="icon">
-                <img src="./images/icons/equipment.jpg" alt="">
-            </div>
-            <div class="info">
-                <a href="./equipment.html">
-                    <h1>Equipment</h1>
-                </a>
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Laoreet id donec ultrices tincidunt arcu non sodales. Volutpat blandit aliquam etiam erat velit scelerisque in dictum non. Dignissim diam quis enim lobortis scelerisque fermentum dui faucibus. Pulvinar etiam non quam lacus suspendisse faucibus interdum posuere. At auctor urna nunc id cursus metus. Feugiat vivamus at augue eget arcu. Arcu odio ut sem nulla pharetra diam sit amet. Amet risus nullam eget felis eget nunc. Eleifend quam adipiscing vitae proin sagittis nisl rhoncus mattis. In est ante in nibh mauris. Viverra aliquet eget sit amet tellus cras adipiscing enim eu.</p>
-            </div>
-        </article>
-        <article class="main hidden">
-            <div class="icon">
-                <img src="./images/icons/courses.jpg" alt="">
-            </div>
-            <div class="info">
-                <h1>Courses</h1>
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Laoreet id donec ultrices tincidunt arcu non sodales. Volutpat blandit aliquam etiam erat velit scelerisque in dictum non. Dignissim diam quis enim lobortis scelerisque fermentum dui faucibus. Pulvinar etiam non quam lacus suspendisse faucibus interdum posuere. At auctor urna nunc id cursus metus. Feugiat vivamus at augue eget arcu. Arcu odio ut sem nulla pharetra diam sit amet. Amet risus nullam eget felis eget nunc. Eleifend quam adipiscing vitae proin sagittis nisl rhoncus mattis. In est ante in nibh mauris. Viverra aliquet eget sit amet tellus cras adipiscing enim eu.</p>
-            </div>
-        </article>
-        <article class="main inverted hidden">
-            <div class="icon">
-                <img src="./images/icons/boat-trip.jpg" alt="">
-            </div>
-            <div class="info">
-                <a href="./equipment.html">
-                    <h1>Boat Trips</h1>
-                </a>
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Laoreet id donec ultrices tincidunt arcu non sodales. Volutpat blandit aliquam etiam erat velit scelerisque in dictum non. Dignissim diam quis enim lobortis scelerisque fermentum dui faucibus. Pulvinar etiam non quam lacus suspendisse faucibus interdum posuere. At auctor urna nunc id cursus metus. Feugiat vivamus at augue eget arcu. Arcu odio ut sem nulla pharetra diam sit amet. Amet risus nullam eget felis eget nunc. Eleifend quam adipiscing vitae proin sagittis nisl rhoncus mattis. In est ante in nibh mauris. Viverra aliquet eget sit amet tellus cras adipiscing enim eu.</p>
-            </div>
-        </article>
-        <article class="main hidden">
-            <div class="icon">
-                <div id="map"></div>
-            </div>
-            <div class="info">
-                <h1>Location</h1>
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Laoreet id donec ultrices tincidunt arcu non sodales. Volutpat blandit aliquam etiam erat velit scelerisque in dictum non. Dignissim diam quis enim lobortis scelerisque fermentum dui faucibus. Pulvinar etiam non quam lacus suspendisse faucibus interdum posuere. At auctor urna nunc id cursus metus. Feugiat vivamus at augue eget arcu. Arcu odio ut sem nulla pharetra diam sit amet. Amet risus nullam eget felis eget nunc. Eleifend quam adipiscing vitae proin sagittis nisl rhoncus mattis. In est ante in nibh mauris. Viverra aliquet eget sit amet tellus cras adipiscing enim eu.</p>
-            </div>
-        </article>
+        <div id="myBtnContainer">
+            <button class="btn active" onclick="filterSelection('all')"> All</button>
+            <button class="btn" onclick="filterSelection('goggles')">Goggles</button>
+            <button class="btn" onclick="filterSelection('bifins')">Bifins</button>
+            <button class="btn" onclick="filterSelection('monofins')">Monofins</button>
+            <button class="btn" onclick="filterSelection('accessories')">Accessories</button>
+        </div>
+        <!-- Equipment -->
+        <section class="products container">
+            <figure class="hidden filterDiv bifins">
+                <div class="flex">
+                    <img src="./images/icons/bifin.png" alt="">
+                </div>
+                <div class="info">
+                    <hr>
+                    <h2>Bifin</h2>
+                    <figcaption>300 SAR</figcaption>
+                </div>
+            </figure>
+            <figure class="hidden filterDiv bifins">
+                <div class="flex">
+                    <img src="./images/icons/bifin.png" alt="">
+                </div>
+                <div class="info">
+                    <hr>
+                    <h2>Bifin</h2>
+                    <figcaption>300 SAR</figcaption>
+                </div>
+            </figure>
+            <figure class="hidden filterDiv bifins">
+                <div class="flex">
+                    <img src="./images/icons/bifin.png" alt="">
+                </div>
+                <div class="info">
+                    <hr>
+                    <h2>Bifin</h2>
+                    <figcaption>300 SAR</figcaption>
+                </div>
+            </figure>
+            <figure class="hidden filterDiv bifins">
+                <div class="flex">
+                    <img src="./images/icons/bifin.png" alt="">
+                </div>
+                <div class="info">
+                    <hr>
+                    <h2>Bifin</h2>
+                    <figcaption>300 SAR</figcaption>
+                </div>
+            </figure>
+            <figure class="hidden filterDiv bifins">
+                <div class="flex">
+                    <img src="./images/icons/bifin.png" alt="">
+                </div>
+                <div class="info">
+                    <hr>
+                    <h2>Bifin</h2>
+                    <figcaption>300 SAR</figcaption>
+                </div>
+            </figure>
+            <figure class="hidden filterDiv bifins">
+                <div class="flex">
+                    <img src="./images/icons/bifin.png" alt="">
+                </div>
+                <div class="info">
+                    <hr>
+                    <h2>Bifin</h2>
+                    <figcaption>300 SAR</figcaption>
+                </div>
+            </figure>
+            <figure class="hidden filterDiv monofins">
+                <div class="flex">
+                    <img src="./images/icons/monofin.png" alt="">
+                </div>
+                <div class="info">
+                    <hr>
+                    <h2>Monofin</h2>
+                    <figcaption>300 SAR</figcaption>
+                </div>
+            </figure>
+            <figure class="hidden filterDiv monofins">
+                <div class="flex">
+                    <img src="./images/icons/monofin.png" alt="">
+                </div>
+                <div class="info">
+                    <hr>
+                    <h2>Monofin</h2>
+                    <figcaption>300 SAR</figcaption>
+                </div>
+            </figure>
+            <figure class="hidden filterDiv monofins">
+                <div class="flex">
+                    <img src="./images/icons/monofin.png" alt="">
+                </div>
+                <div class="info">
+                    <hr>
+                    <h2>Monofin</h2>
+                    <figcaption>300 SAR</figcaption>
+                </div>
+            </figure>
+            <figure class="hidden filterDiv monofins">
+                <div class="flex">
+                    <img src="./images/icons/monofin.png" alt="">
+                </div>
+                <div class="info">
+                    <hr>
+                    <h2>Monofin</h2>
+                    <figcaption>300 SAR</figcaption>
+                </div>
+            </figure>
+            <figure class="hidden filterDiv monofins">
+                <div class="flex">
+                    <img src="./images/icons/monofin.png" alt="">
+                </div>
+                <div class="info">
+                    <hr>
+                    <h2>Monofin</h2>
+                    <figcaption>300 SAR</figcaption>
+                </div>
+            </figure>
+            <figure class="hidden filterDiv goggles">
+                <div class="flex">
+                    <img src="./images/icons/goggles.png" alt="">
+                </div>
+                <div class="info">
+                    <hr>
+                    <h2>Goggles</h2>
+                    <figcaption>300 SAR</figcaption>
+                </div>
+            </figure>
+            <figure class="hidden filterDiv goggles">
+                <div class="flex">
+                    <img src="./images/icons/goggles.png" alt="">
+                </div>
+                <div class="info">
+                    <hr>
+                    <h2>Goggles</h2>
+                    <figcaption>300 SAR</figcaption>
+                </div>
+            </figure>
+            <figure class="hidden filterDiv goggles">
+                <div class="flex">
+                    <img src="./images/icons/goggles.png" alt="">
+                </div>
+                <div class="info">
+                    <hr>
+                    <h2>Goggles</h2>
+                    <figcaption>300 SAR</figcaption>
+                </div>
+            </figure>
+            <figure class="hidden filterDiv goggles">
+                <div class="flex">
+                    <img src="./images/icons/goggles.png" alt="">
+                </div>
+                <div class="info">
+                    <hr>
+                    <h2>Goggles</h2>
+                    <figcaption>300 SAR</figcaption>
+                </div>
+            </figure>
+            <figure class="hidden filterDiv goggles">
+                <div class="flex">
+                    <img src="./images/icons/goggles.png" alt="">
+                </div>
+                <div class="info">
+                    <hr>
+                    <h2>Goggles</h2>
+                    <figcaption>300 SAR</figcaption>
+                </div>
+            </figure>
+            <figure class="hidden filterDiv goggles">
+                <div class="flex">
+                    <img src="./images/icons/goggles.png" alt="">
+                </div>
+                <div class="info">
+                    <hr>
+                    <h2>Goggles</h2>
+                    <figcaption>300 SAR</figcaption>
+                </div>
+            </figure>
+            <figure class="hidden filterDiv accessories">
+                <div class="flex">
+                    <img src="./images/icons/watch.png" alt="">
+                </div>
+                <div class="info">
+                    <hr>
+                    <h2>Watch</h2>
+                    <figcaption>300 SAR</figcaption>
+                </div>
+            </figure>
+            <figure class="hidden filterDiv accessories">
+                <div class="flex">
+                    <img src="./images/icons/watch.png" alt="">
+                </div>
+                <div class="info">
+                    <hr>
+                    <h2>Watch</h2>
+                    <figcaption>300 SAR</figcaption>
+                </div>
+            </figure>
+            <figure class="hidden filterDiv accessories">
+                <div class="flex">
+                    <img src="./images/icons/watch.png" alt="">
+                </div>
+                <div class="info">
+                    <hr>
+                    <h2>Watch</h2>
+                    <figcaption>300 SAR</figcaption>
+                </div>
+            </figure>
+            <figure class="hidden filterDiv accessories">
+                <div class="flex">
+                    <img src="./images/icons/watch.png" alt="">
+                </div>
+                <div class="info">
+                    <hr>
+                    <h2>Watch</h2>
+                    <figcaption>300 SAR</figcaption>
+                </div>
+            </figure>
+            <figure class="hidden filterDiv accessories">
+                <div class="flex">
+                    <img src="./images/icons/nose-clip.png" alt="">
+                </div>
+                <div class="info">
+                    <hr>
+                    <h2>Nose Clip</h2>
+                    <figcaption>300 SAR</figcaption>
+                </div>
+            </figure>
+            <figure class="hidden filterDiv accessories">
+                <div class="flex">
+                    <img src="./images/icons/nose-clip.png" alt="">
+                </div>
+                <div class="info">
+                    <hr>
+                    <h2>Nose Clip</h2>
+                    <figcaption>300 SAR</figcaption>
+                </div>
+            </figure>
+            <figure class="hidden filterDiv accessories">
+                <div class="flex">
+                    <img src="./images/icons/nose-clip.png" alt="">
+                </div>
+                <div class="info">
+                    <hr>
+                    <h2>Nose Clip</h2>
+                    <figcaption>300 SAR</figcaption>
+                </div>
+            </figure>
+            <figure class="hidden filterDiv accessories">
+                <div class="flex">
+                    <img src="./images/icons/nose-clip.png" alt="">
+                </div>
+                <div class="info">
+                    <hr>
+                    <h2>Nose Clip</h2>
+                    <figcaption>300 SAR</figcaption>
+                </div>
+            </figure>
+        </section>
     </main>
     <footer>
         <!-- Icon and social media links -->
         <article class="flex">
-            <div class="navigation">
-                <h2>Find us:</h2>
-                <nav class="flex">
-                    <li><a href="#">Instagram</a></li>
-                    <li><a href="#">Twitter</a></li>
-                    <li><a href="#">Snapchat</a></li>
-                    <li><a href="#">Youtube</a></li>
-                    <li><a href="#">Facebook</a></li>
-                </nav>
+            <div class="social">
+                <img src="./images/logo/logo-extended.svg" alt="logo" class="logo">
+                <icons class="flex">
+                    <a href=""><img src="./images/icons/snapchat.svg"></a>
+                    <a href=""><img src="./images/icons/instagram.svg"></a>
+                    <a href=""><img src="./images/icons/twitter.svg"></a>
+                </icons>
             </div>
             <!-- Footer navigation -->
             <div class="navigation">
-                <h2>Quick links:</h2>
+                <h2>Quick Links:</h2>
                 <nav class="flex">
                     <li><a href="./index.html">Home</a></li>
                     <li><a href="./athletes.html">Athletes</a></li>
-                    <li><a href="./equipment.html">Equipment</a></li>
-                    <li><a href="./courses.html">Courses</a></li>
-                    <li><a href="./trips.html">Boat Trips</a></li>
-                    <li><a href="./location.html">Location</a></li>
+                    <li><a href="#">Equipment</a></li>
+                    <li><a href="#">Courses</a></li>
+                    <li><a href="#">Boat Trips</a></li>
+                    <li><a href="#">Location</a></li>
                 </nav>
             </div>
             <!-- Footer contact information -->
@@ -162,9 +362,10 @@
         </div>
     </footer>
     <script src="./assets/js/main.js"></script>
-    <script src="./assets/js/typewriter.js"></script>
-    <script src="./assets/js/map.js"></script>
-    <script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCXCoaEUQukI47Pfw1lCLogQyXrdAmI59Y&callback=initMap"></script>
+    <script src="./assets/js/filter.js"></script>
+    <script>
+        filterSelection("all")
+    </script>
 </body>
 
 </html>
