--- a/index.html
+++ b/index.html
@@ -145,6 +145,23 @@
                 <a class="blue-link" href="./stumble.html"><span>Play Stumble</span>></a>
             </div>
         </article>
+        <article class="main hidden">
+            <div class="icon">
+                <img src="./images/icons/mail.svg" alt="">
+            </div>
+            <div class="info">
+                <a href="">
+                    <h1>Send a message:</h1>
+                </a>
+                <form class="contact-form" name="contact" method="POST" data-netlify-recaptcha="true" data-netlify="true">
+                    <p><input type="text" name="name" placeholder="Name" required/></p>
+                    <p><input type="text" name="email" placeholder="Email" required></textarea></p>
+                    <p><textarea name="message" placeholder="Message" required></textarea></p>
+                    <div class="recaptcha" data-netlify-recaptcha="true"></div>
+                    <p><button type="submit"><span>Send</span></button></p>
+                </form>
+            </div>
+        </article>
     </main>
     <footer>
         <article class="flex">
@@ -194,3 +211,4 @@
 </body>
 
 </html>
+  
