--- a/algorithms.html
+++ b/algorithms.html
@@ -67,7 +67,7 @@
         <!-- General algorithms article -->
         <article class="main hidden">
             <div class="icon">
-                <img src="./images/icons/gears-icon.svg" alt="">
+                <img src="./images/icons/gears.svg" alt="">
             </div>
             <div class="info">
                 <a href="">
@@ -88,7 +88,7 @@
         <!-- Search algorithms article -->
         <article class="main inverted hidden">
             <div class="icon">
-                <img src="./images/icons/nodes-icon.svg" alt="">
+                <img src="./images/icons/nodes.svg" alt="">
             </div>
             <div class="info">
                 <a href="">
@@ -110,7 +110,7 @@
         <!-- Sort algorithms article -->
         <article class="main hidden">
             <div class="icon">
-                <img src="./images/icons/sorted-bars-icon.svg" alt="">
+                <img src="./images/icons/sorted-bars.svg" alt="">
             </div>
             <div class="info">
                 <h1>Sort algorithms</h1>
