--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
         <!-- About article -->
         <article class="main hidden">
             <div class="icon">
-                <img src="./images/icons/gears-icon.svg" alt="">
+                <img src="./images/icons/gears.svg" alt="">
             </div>
             <div class="info">
                 <a href="">
@@ -89,7 +89,7 @@
         <!-- Algorithms article -->
         <article class="main inverted hidden">
             <div class="icon">
-                <img src="./images/icons/nodes-icon.svg" alt="">
+                <img src="./images/icons/nodes.svg" alt="">
             </div>
             <div class="info">
                 <a href="">
@@ -108,7 +108,7 @@
         <!-- Web design article -->
         <article class="main hidden">
             <div class="icon">
-                <img src="./images/icons/web-design-icon.svg" alt="">
+                <img src="./images/icons/web-design.svg" alt="">
             </div>
             <div class="info">
                 <a href="">
@@ -128,7 +128,7 @@
         <!-- Game development article -->
         <article class="main inverted hidden">
             <div class="icon">
-                <img src="./images/icons/game-controller-icon.svg" alt="">
+                <img src="./images/icons/game-controller.svg" alt="">
             </div>
             <div class="info">
                 <h1>Game development</h1>
